Fix z-indexes

--- a/src/components/common/ItemOption/ItemOption.module.scss
+++ b/src/components/common/ItemOption/ItemOption.module.scss
@@ -7,7 +7,7 @@
   align-items: center;
   flex-wrap: wrap;
   width: 70%;
-  z-index: 1;
+  z-index: 3;
   background: $color-light;
   @extend%item-border;
 
